--- a/index.html
+++ b/index.html
@@ -1,4 +1,49 @@
+
+<!DOCTYPE html>
 <html>
-	<head><title>kimroege.github.io</title></head>
-	<body><p>Nothing to see here</p></body>
+<head>
+<title>Index</title>
+
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<style type="text/css">
+	body {
+		font-family: Verdana, Geneva, sans-serif;	
+	}
+	h1 {
+		color: #195999;
+		font-family: Verdana, Geneva, sans-serif;	
+	}
+	a:link {
+		text-decoration: none;
+	  	color: #195999;
+		font-family: Verdana, Geneva, sans-serif;
+	}
+
+	a:visited {
+		text-decoration: none;
+		color: #195999;
+		font-family: Verdana, Geneva, sans-serif;
+	}
+
+	a:hover {
+	  	text-decoration: underline;		
+	  	color: #195999;
+		font-family: Verdana, Geneva, sans-serif;
+	}
+
+	a:active {
+	  	text-decoration: underline;
+		color: #195999;
+		font-family: Verdana, Geneva, sans-serif;
+	}
+
+</style>
+
+</script>
+
+</head>
+<body>
+<a href="https://kimroege.github.io/daily-dilbert">Daily Dilbert Comic</a>
+</body>
 </html>
+
