--- a/index.html
+++ b/index.html
@@ -43,7 +43,9 @@
 
 </head>
 <body>
-<a href="https://kimroege.github.io/daily-dilbert">Daily Dilbert Comic</a>
+	<a href="https://kimroege.github.io/gvd-tv-oversigt/gvd.htm">GVD TV oversigt</a><br><br>
+	<a href="https://kimroege.github.io/daily-dilbert">Daily Dilbert Comic</a>
+
 </body>
 </html>
 
