--- a/sqllines.htm
+++ b/sqllines.htm
@@ -83,15 +83,15 @@ function copyOutput() {
       <tbody>
       <tr>
       <td style="width: 150px;">Input total: </td>
-      <td style="width: 25px;"><span id="it"></span></td>
+      <td style="width: 25px; text-align: right;"><span id="it"></span></td>
       </tr>
       <tr>
       <td style="width: 150px;">Output total: </td>
-      <td style="width: 25px;"><span id="ot"></span></td>
+      <td style="width: 25px; text-align: right;"><span id="ot"></span></td>
       </tr>
       <tr>
       <td style="width: 150px;">Removed: </td>
-      <td style="width: 25px;"><span id="rt"></span></td>
+      <td style="width: 25px; text-align: right;"><span id="rt"></span></td>
       </tr>
       </tbody>
       </table>
