--- a/sqllines.htm
+++ b/sqllines.htm
@@ -73,7 +73,7 @@ function copyOutput() {
 <table>
 <tbody>
 <tr>
-<td style="width: 300px;"><textarea id="listen" cols="79" name="mainlist" rows="20"></textarea></td>
+<td style="width: 300px;"><textarea placeholder="Insert values here&#10;and convert it&#10;into SQL format" id="listen" cols="79" name="mainlist" rows="20"></textarea></td>
 <td style="width: 500px;">
   <center>
     <input type="button" class="button" onClick="listsql();"  value="SQL ->" /><br /><br />
