--- a/sqllines.htm
+++ b/sqllines.htm
@@ -90,7 +90,7 @@ function copyOutput() {
       <td style="width: 25px; text-align: right;"><span id="ot"></span></td>
       </tr>
       <tr>
-      <td style="width: 150px;">Duplicates removed: </td>
+      <td style="width: 150px;">Dupes removed: </td>
       <td style="width: 25px; text-align: right;"><span id="rt"></span></td>
       </tr>
       </tbody>
