--- a/filmstriben.htm
+++ b/filmstriben.htm
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html>
 	<head>
@@ -5,33 +6,60 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<script>
+			let movies = [];
 
 			function go() {
-				var baseurl = 'https://fjernleje.filmstriben.dk/ajax/search/search?query=*&pagination%5Bsorting%5D=cd-asc';
-				var corsProxy = 'https://cors-anywhere.herokuapp.com/'+baseurl;
-				url = corsProxy;
+				const baseurl = 'https://fjernleje.filmstriben.dk/ajax/search/search?query=*&pagination%5Bsorting%5D=cd-asc';
+				const corsProxy = 'https://cors-anywhere.herokuapp.com/';
+				const url = corsProxy+baseurl;
 
-				console.log(url);
-
-				var xhttp = new XMLHttpRequest();
+				let xhttp = new XMLHttpRequest();
 				xhttp.onreadystatechange = function() {
 					if (this.readyState == 4 && this.status == 200) {
 						json = JSON.parse(xhttp.responseText);
-						//console.log(json);
 						json.res.forEach(conslist);
+						movies.sort((a, b) => (a.publish_date < b.publish_date) ? 1 : -1)
+						createTable();
 					};
 				}
 				xhttp.open("GET", url, true);
 				xhttp.setRequestHeader("x-requested-with", 'Filmstriben');
 				xhttp.send();
-
 			}
+
 			function conslist(item) {
-				console.log(item.fields.item_title);
+				let imdb = typeof item.fields.field_imdb_id === "undefined" ? '' : item.fields.field_imdb_id.value;
+				let movie = {
+  					title: item.fields.item_title,
+  					publish_date: item.fields.publish_date.value,
+  					imdb: imdb, 
+  					desc: item.fields.item_descr
+				};
+				movies.push(movie);
+			}
+
+			function createTable() {
+				const tableStart 	= '<table class="tg"><tr><th class="tg-0pky" align="left">Title</th><th class="tg-0pky" align="left">Date</th><th class="tg-0pky" align="left">imdb</th></tr>';
+				const tableEnd 	= '</table>';
+				let tableRow;
+				for (let i = 0; i < movies.length; i++) {
+					tableRow += createTableRow(movies[i]);
+				}
+        document.getElementById("table").innerHTML = tableStart + tableRow + tableEnd;
+				document.getElementById('table').childNodes[0].nodeValue = null; // Get rid of "undefined"
+			}
+
+			function createTableRow(item) {
+				return '<tr><td class="tg-0pky"><a href="#" onClick=\'alertDescription(\"'+ item.desc +'\");return false;\'>'+ item.title +'</a></td><td class="tg-0pky">'+ item.publish_date +'</td><td class="tg-0pky"><a href="https://imdb.com/title/'+ item.imdb +'">'+ item.imdb +'</a></td></tr>';
+			}
+
+			function alertDescription(desc) {
+				alert(desc);
 			}
 
     </script>
 	</head>
 	<body onload="go();">
+		<div id="table"></div>
 	</body>
 </html>
