--- a/pr.htm
+++ b/pr.htm
@@ -4,7 +4,10 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 </head>
 <body>
-<div id="pr-product-widget-3d0fa110" style="display: block; width: 100%">
-<script type="text/javascript" src="https://api.pricerunner.com/publisher-widgets/dk/product.js?offerLimit=5&amp;productId=4883769&amp;partnerId=adrunner_dk_ekstrabladet_dir&amp;onlyInStock=false&amp;ctaBgColor=%23bd1118&amp;primaryTextColor=%23bd1118&amp;widgetId=pr-product-widget-3d0fa110" async=""></script>
+<div id="klodskasse" style="display: block; width: 100%">
+<div id="ipad" style="display: block; width: 100%">
+<script type="text/javascript" src="https://api.pricerunner.com/publisher-widgets/dk/product.js?offerLimit=5&amp;productId=5044911&amp;partnerId=adrunner_dk_ekstrabladet_dir&amp;onlyInStock=false&amp;ctaBgColor=%23bd1118&amp;primaryTextColor=%23bd1118&amp;widgetId=ipad" async=""></script>
+<script type="text/javascript" src="https://api.pricerunner.com/publisher-widgets/dk/product.js?offerLimit=5&amp;productId=4883769&amp;partnerId=adrunner_dk_ekstrabladet_dir&amp;onlyInStock=false&amp;ctaBgColor=%23bd1118&amp;primaryTextColor=%23bd1118&amp;widgetId=klodskasse" async=""></script>
 </body>
 </html>
+5044911
