--- a/sqllines.htm
+++ b/sqllines.htm
@@ -29,6 +29,52 @@ body {
 
 <SCRIPT LANGUAGE="Javascript">
 
+document.addEventListener('keydown', keyCode);
+
+function keyCode(e) {
+  // 81 = q
+  // 78 = n
+  // 67 = c
+  // 80 = p
+  // 84 = t
+
+  //alert(e.keyCode);
+  if (e.keyCode == 81) {
+    listsql();
+    copyOutput();
+    e.preventDefault();
+  }
+
+  if (e.keyCode == 67) {
+    copyOutput();
+    e.preventDefault();
+  }
+
+  if (e.keyCode == 84) {
+    selected = document.getElementById("radio_text");
+    selected.checked = true;
+    listsql();
+    copyOutput();
+    e.preventDefault();
+  }
+
+  if (e.keyCode == 78) {
+    toggle = document.getElementById("radio_number");
+    toggle.checked = true;
+    listsql();
+    copyOutput();
+    e.preventDefault();
+  }
+
+  if (e.keyCode == 80) {
+    toggle = document.getElementById("radio_pipe");
+    toggle.checked = true;
+    listsql();
+    copyOutput();
+    e.preventDefault();
+  }
+}
+
 var out = "";
 
 function listsql() {
@@ -44,26 +90,55 @@ function listsql() {
   ArrayNoDupes.forEach(prepOutput);
 
   var newStr = out.slice(0, -1);  // Remove tailing ,
-  var output = '('+newStr+')';
+
+
+  var p = document.getElementById("radio_pipe").checked;
+  if (!p) {
+    var output = '('+newStr+')';
+  }
+  else
+    { 
+      var output = newStr;
+    }
 
   document.getElementById("listenOut").value = output;
 }
 
 function prepOutput(value, index, array) {
-  var x = document.getElementById("numbers").checked;
-    if (x) {
+  //var x = document.getElementById("numbers").checked;
+  //var p = document.getElementById("pipe").checked;
+
+  var r_text = document.getElementById("radio_text").checked;
+  var r_number = document.getElementById("radio_number").checked;
+  var r_pipe = document.getElementById("radio_pipe").checked;
+
+
+  if (r_text) {
+    out = out + "'"+value+"'" + ","
+  }
+  if (r_number) {
+    out = out + value + ",";
+  }
+  if (r_pipe) {
+    out = out + value + "|";
+  }
+
+    /*if (p) {
+      out = out + value + "|";
+    }
+
+    if (x && !p) {
       out = out + value + ","; 
     }
-    else  {
+    if (!x && !p)  {
       out = out + "'"+value+"'" + "," 
-    }
+    }*/
 }
 
 function copyOutput() {
   var copyText = document.getElementById("listenOut");
   copyText.select();
   document.execCommand("copy");
-  //alert("Copied the text: " + copyText.value);
 }
 </SCRIPT>
 
@@ -76,11 +151,26 @@ function copyOutput() {
 <td style="width: 300px;"><textarea placeholder="Insert values here&#10;and convert it&#10;into SQL format" id="listen" cols="79" name="mainlist" rows="20"></textarea></td>
 <td style="width: 500px;">
   <center>
-    <input type="button" class="button" onClick="listsql();"  value="SQL ->" /><br /><br />
-    Numbers <input id="numbers" type="checkbox" /><br /><br />
-    <input type="button" class="button" onClick="copyOutput();"  value="Copy" /><br /><br />
+    <!--<input type="button" class="button" onClick="listsql();"  value="SQL ->" /><br/><br/>
+    <input id="numbers" type="checkbox"> Numbers <br/>
+    <input id="pipe" type="checkbox"> Pipe<br/>
+    <input id="radio_text" type="radio" name="outType" value="text"> Text (Press T)<br/>
+    <input id="radio_number" type="radio" name="outType" value="text"> Number (Press N)<br/>
+    <input id="radio_pipe" type="radio" name="outType" value="text"> Pipe (Press P)<br/>
+    <input type="button" class="button" onClick="copyOutput();"  value="Copy" /><br/><br/>-->
       <table>
       <tbody>
+        <tr>
+      <td style="width: 175px;"><input id="radio_text" type="radio" name="outType" value="text"> Text (Press T)</td>
+      </tr>
+      <tr>
+      <td style="width: 175px;"><input id="radio_number" type="radio" name="outType" value="text"> Number (Press N)</td>
+      </tr>
+      <tr>
+      <td style="width: 175px;"><input id="radio_pipe" type="radio" name="outType" value="text"> Pipe (Press P)<br><br></td>
+      </tr>
+
+
       <tr>
       <td style="width: 150px;">Input total: </td>
       <td style="width: 25px; text-align: right;"><span id="it"></span></td>
@@ -95,7 +185,7 @@ function copyOutput() {
       </tr>
       </tbody>
       </table>
-  </center>
+  </cwnter>
   </td>
 <td style="width: 300px;"><textarea id="listenOut" cols="79" name="mainlistOut" rows="20"></textarea></td>
 </tr>
