--- a/plmnlist.htm
+++ b/plmnlist.htm
@@ -6,14 +6,15 @@
 
 <script>
 	let url = 'https://raw.githubusercontent.com/PodgroupConnectivity/mcc-mnc-list/master/mcc-mnc-list.json';
-
+	let test;
 	fetch(url)
 	.then(res => res.json())
 	.then((out) => {
 	  createList(out);
-	  document.getElementById("list").innerHTML += "default: return 'unknown';";
+	  //document.getElementById("list").innerHTML += "default: return 'unknown';";
 	})
 	.catch(err => { throw err });
+	console.log(test);
 
 	/*function createList(arr) {
 		arr.forEach((element, index, array) => {
@@ -24,7 +25,7 @@
 	function createList(arr) {
 		arr.forEach((element, index, array) => {
 			var string = "INSERT INTO telematicsdevice.mobile_operator (id,name) VALUES (N'"+ element.plmn +"', N'"+ element.operator +"') <br>";
-			document.getElementById("list").innerHTML += string;
+			test += string;
 		});
 	}
 
