--- a/plmnlist.htm
+++ b/plmnlist.htm
@@ -7,6 +7,7 @@
 <script>
 	let url = 'https://raw.githubusercontent.com/PodgroupConnectivity/mcc-mnc-list/master/mcc-mnc-list.json';
 	let test;
+	console.log("starting");
 	fetch(url)
 	.then(res => res.json())
 	.then((out) => {
