--- a/plmnlist.htm
+++ b/plmnlist.htm
@@ -6,6 +6,7 @@
 
 <script>
 	let url = 'https://raw.githubusercontent.com/PodgroupConnectivity/mcc-mnc-list/master/mcc-mnc-list.json';
+	// let url = 'https://raw.githubusercontent.com/pbakondy/mcc-mnc-list/master/mcc-mnc-list.json';
 	let test;
 	console.log("starting");
 	fetch(url)
