--- a/epicfree.htm
+++ b/epicfree.htm
@@ -19,7 +19,7 @@
 
         <script type="text/javascript">
             const page = "https://store-site-backend-static.ak.epicgames.com/freeGamesPromotions?locale=en-US&country=DK&allowCountries=DK";
-            const corsproxy = "https://cors-anywhere.herokuapp.com/";
+            const corsproxy = "https://api.allorigins.win/raw?url=";
             const productPage = "https://www.epicgames.com/store/en-US/product/";
             const imageType = "DieselStoreFrontTall";
 
