Update CORS proxy

--- a/filmstriben.htm
+++ b/filmstriben.htm
@@ -17,7 +17,7 @@
 
 			function go() {
 				const baseurl = 'https://fjernleje.filmstriben.dk/ajax/search/search?query=*&pagination%5Bsorting%5D=cd-asc';
-				const corsProxy = 'https://cors-anywhere.herokuapp.com/';
+				const corsProxy = 'https://api.allorigins.win/raw?url=';
 				const url = corsProxy+baseurl;
 
 				let xhttp = new XMLHttpRequest();
